--- a/node.jquery.mobile/views/about.ejs
+++ b/node.jquery.mobile/views/about.ejs
@@ -3,10 +3,10 @@
     <div data-role="header" class="ui-bar-a ui-header" role="banner">
         <a href="/" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
         <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
-        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">node.jquery.mobile - about</h1>
+        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1"><%=title%> - about</h1>
     </div>
     <div data-role="content" class="ui-content" role="main">
-        <h2>node.jquery.mobile - about</h2>
+        <h2><%=title%> - about</h2>
         <p>this boilerplate uses node.js, express, socket.io mongoose and of course jquery.mobile</p>
         <ul data-role="listview" data-inset="true">
             <li><a href="/" data-ajax="false">home</a></li>
@@ -17,6 +17,6 @@
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
-        <h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2011 node.jquery.mobile</h4>
+        <h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2012 <%=title%></h4>
     </div>
 </div>
