--- a/node.jquery.mobile/views/layout.ejs
+++ b/node.jquery.mobile/views/layout.ejs
@@ -5,7 +5,7 @@
 		<base href=".">
 		<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
 		<meta charset="utf-8"> 
-		<title>node.jquery.mobile - home</title> 		
+		<title><%=title%></title>
 		<link rel="stylesheet" href="http://jquerymobile.com/demos/1.0a2/docs/pages/_assets/css/jqm-docs.css">
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
 		<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
