--- a/node.jquery.mobile/views/login.ejs
+++ b/node.jquery.mobile/views/login.ejs
@@ -2,10 +2,10 @@
     <div data-role="header" class="ui-bar-a ui-header" role="banner">
         <a href="/"  data-ajax="false" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
         <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
-        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">node.jquery.mobile - login</h1>
+        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1"><%=title%> - login</h1>
     </div>
     <div data-role="content" class="ui-content" role="main">
-        <h2>login</h2>
+        <h2><%=title%> - login</h2>
         <p>complete the below to login/register</p>
         <form method="POST" action="/login" enctype="application/x-www-form-urlencoded" id="login_form" name="login_form">
             <div data-role="fieldcontain">
@@ -20,6 +20,6 @@
         </form>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
-        <h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2011 node.jquery.mobile</h4>
+        <h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2012 <%=title%></h4>
     </div>
 </div>
