--- a/node.jquery.mobile/views/about.ejs
+++ b/node.jquery.mobile/views/about.ejs
@@ -14,6 +14,7 @@
             <li><a href="login" data-ajax="false">login</a></li>
             <li><a href="contact" data-ajax="false">contact us</a></li>
             <li><a href="github" data-ajax="false">github</a></li>
+            <li><a href="channels" data-ajax="false">channels</a></li>
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
