--- a/node.jquery.mobile/views/channels.ejs
+++ b/node.jquery.mobile/views/channels.ejs
@@ -1,13 +1,21 @@
-<!-- contact page -->
-<div data-role="page" id="contact" class="ui-page ui-body-c " data-dom-cache="true">
+<!-- channels page -->
+<div data-role="page" id="channels" class="ui-page ui-body-c " data-dom-cache="true">
     <div data-role="header" class="ui-bar-a ui-header" role="banner">
         <a href="/" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
         <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
-        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1"><%=title%> - contact</h1>
+        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1"><%=title%> - channels</h1>
     </div>
     <div data-role="content" class="ui-content" role="main">
-        <h2><%=title%> - contact</h2>
-        <p>contact us here <a href="andrew.keig@gmail.com">andrew dot keig at gmail dot com</a></p>
+        <h2><%=title%> - channels</h2>
+
+        List of channels
+        <ul data-role="channelview" data-inset="true">
+            <li><a href="node.js">node.js</a></li>
+            <li><a href="backbone.js">backbone.js</a></li>
+            <li><a href="coffescript">coffescript</a></li>
+            <li><a href="mongodb">mongodb</a></li>
+        </ul>
+
         <ul data-role="listview" data-inset="true">
             <li><a href="/" data-ajax="false">home</a></li>
             <li><a href="about" data-ajax="false">about</a></li>
