--- a/node.jquery.mobile/views/contact.ejs
+++ b/node.jquery.mobile/views/contact.ejs
@@ -10,11 +10,11 @@
         <p>contact us here <a href="andrew.keig@gmail.com">andrew dot keig at gmail dot com</a></p>
         <ul data-role="listview" data-inset="true">
             <li><a href="/" data-ajax="false">home</a></li>
-            <li><a href="about" data-ajax="false">about</a></li>
-            <li><a href="login" data-ajax="false">login</a></li>
-            <li><a href="contact" data-ajax="false">contact us</a></li>
-            <li><a href="github" data-ajax="false">github</a></li>
-            <li><a href="channels" data-ajax="false">channels</a></li>
+            <li><a href="/about" data-ajax="false">about</a></li>
+            <li><a href="/login" data-ajax="false">login</a></li>
+            <li><a href="/contact" data-ajax="false">contact us</a></li>
+            <li><a href="/github" data-ajax="false">github</a></li>
+            <li><a href="/account" data-ajax="false">account</a></li>
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
