--- a/node.jquery.mobile/views/account.ejs
+++ b/node.jquery.mobile/views/account.ejs
@@ -8,8 +8,7 @@
     <div data-role="content" class="ui-content" role="main">
         <h2><%=title%> - account</h2>
 
-        My Account <a href="logout">logout</a>
-
+        My Account <a href="logout" data-ajax="false">logout</a>
 
         <ul data-role="listview" data-inset="true">
             <li><a href="/" data-ajax="false">home</a></li>
