--- a/node.jquery.mobile/views/about.ejs
+++ b/node.jquery.mobile/views/about.ejs
@@ -7,7 +7,7 @@
     </div>
     <div data-role="content" class="ui-content" role="main">
         <h2><%=title%> - about</h2>
-        <p>this boilerplate uses node.js, express, socket.io mongoose and of course jquery.mobile</p>
+        <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
         <ul data-role="listview" data-inset="true">
             <li><a href="/" data-ajax="false">home</a></li>
             <li><a href="/about" data-ajax="false">about</a></li>
