--- a/node.jquery.mobile/views/github.ejs
+++ b/node.jquery.mobile/views/github.ejs
@@ -7,7 +7,7 @@
     </div>
     <div data-role="content" class="ui-content" role="main">
         <h2><%=title%> - github</h2>
-        <p>download node.jquery.mobile here <a href="andrew.keig@gmail.com">------>>></a></p>
+        <p><a href="andrew.keig@gmail.com">download <%=title%> here</a></p>
         <ul data-role="listview" data-inset="true">
             <li><a href="/" data-ajax="false">home</a></li>
             <li><a href="/about" data-ajax="false">about</a></li>
