--- a/node.jquery.mobile/views/index.ejs
+++ b/node.jquery.mobile/views/index.ejs
@@ -7,7 +7,7 @@
     </div>
     <div data-role="content" class="ui-content" role="main">
         <h2><%=title%> - home</h2>
-        <p>welcome to node.jquery.mobile; a node.js boiler plate application</p>
+        <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
         <ul data-role="listview" data-inset="true">
             <li><a href="/" data-ajax="false">home</a></li>
             <li><a href="/about" data-ajax="false">about</a></li>
