--- a/node.jquery.mobile/views/layout.html
+++ b/node.jquery.mobile/views/layout.html
@@ -5,7 +5,7 @@
 		<base href=".">
 		<meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
 		<meta charset="utf-8"> 
-		<title><%=title%></title>
+		<title>{{title}}</title>
 
 		<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
 		<script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
@@ -26,6 +26,6 @@
 
 	</head> 
 	<body class="ui-mobile-viewport">
-        <%-body%>
+
 	</body>
 </html>
