--- a/node.jquery.mobile/views/about.html
+++ b/node.jquery.mobile/views/about.html
@@ -1,12 +1,39 @@
+<!DOCTYPE html>
+<html class="ui-mobile min-width-320px min-width-480px min-width-768px min-width-1024px landscape">
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+    <base href=".">
+    <meta name="viewport" content="width=device-width, minimum-scale=1, maximum-scale=1">
+    <meta charset="utf-8">
+    <title>{{title}}</title>
+    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
+    <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
+    <script src="/javascripts/socket.io.js"></script>
+    <script src="/javascripts/node.plates.js"></script>
+    <script>
+        $(document).ready(function(){
+            var socket = io.connect('127.0.0.1',{ port: 3000 });
+
+            socket.on('hello', function( ){
+                alert('socket.io is at you service');
+            });
+
+            socket.emit('ready', { true:true });
+        });
+    </script>
+
+</head>
+<body class="ui-mobile-viewport">
 <!-- about page -->
 <div data-role="page" id="about" class="ui-page ui-body-c " data-dom-cache="true">
     <div data-role="header" class="ui-bar-a ui-header" role="banner">
         <a href="/" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
         <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
-        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1"><%=title%> - about</h1>
+        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">{{title}} - about</h1>
     </div>
     <div data-role="content" class="ui-content" role="main">
-        <h2><%=title%> - about</h2>
+        <h2>{{title}} - about</h2>
         <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
         <ul data-role="listview" data-inset="true">
             <li><a href="/" data-ajax="false">home</a></li>
@@ -18,6 +45,8 @@
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
-        <h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2012 <%=title%></h4>
+        <h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2012 {{title}}</h4>
     </div>
 </div>
+</body>
+</html>
