--- a/node.jquery.mobile/public/views/github.html
+++ b/node.jquery.mobile/public/views/github.html
@@ -34,13 +34,10 @@
     <div data-role="content" class="ui-content" role="main">
         <h2>{{title}} - github</h2>
         <p><a href="andrew.keig@gmail.com">download {{title}} here</a></p>
-        <ul data-role="listview" data-inset="true">
-            <li><a href="/" data-ajax="false">home</a></li>
-            <li><a href="/about" data-ajax="false">about</a></li>
-            <li><a href="/login" data-ajax="false">login</a></li>
-            <li><a href="/contact" data-ajax="false">contact us</a></li>
-            <li><a href="/github" data-ajax="false">github</a></li>
-            <li><a href="/account" data-ajax="false">account</a></li>
+        <ul  data-role="listview" data-inset="true">
+            {{#each actions}}
+            <li><a href="{{url}}" data-ajax="false">{{label}}</a></li>
+            {{/each}}
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
