--- a/node.jquery.mobile/public/views/about.html
+++ b/node.jquery.mobile/public/views/about.html
@@ -10,13 +10,50 @@
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
     <script src="/javascripts/socket.io.js"></script>
-    <!--<script src="/javascripts/dust-full-0.3.0.min.js"></script>-->
+    <script src="/javascripts/node.plates.js"></script>
+
+    <!--server
+    <script>
+        var page = 'about';
+        $.mobile.autoInitializePage = false
+    </script>
+    <script src="/javascripts/bootstrap_server_templating.js"></script>
+    -->
+
+    <!--compile
+     <script>
+        var page = 'about';
+        $.mobile.autoInitializePage = false
+    </script>
+    <script src="/javascripts/dust-full-0.3.0.min.js"></script>
+    <script src="/javascripts/bootstrap_client_compile_templating.js"></script>-->
+
+    <!--precompile-->
+     <script>
+        var page = 'about';
+        $.mobile.autoInitializePage = false
+    </script>
     <script src="/javascripts/dust-core-0.3.0.js"></script>
     <script src="/views/partials/compiled_0_0_1/about_0_0_1.js"></script>
-    <script src="/javascripts/node.plates.js"></script>
     <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>
 </head>
 <body class="ui-mobile-viewport" id="about">
-
+    <div data-role="page" class="ui-page ui-body-c ">
+        <div data-role="header" class="ui-bar-a ui-header" role="banner">
+            <a href="/" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
+                <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
+            <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">{title} - about</h1>
+        </div>
+        <div data-role="content" class="ui-content" role="main">
+            <h2>{title} - about</h2>
+            <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
+            <ul  data-role="listview" data-inset="true">
+                {#actions}<li><a href="{url}" data-ajax="false">{label}</a></li>{/actions}
+            </ul>
+        </div>
+        <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
+            <h4 class="ui-title" tabindex="0" role="heading" aria-level="1">@2012 {title}</h4>
+        </div>
+    </div>
 </body>
 </html>
