--- a/node.jquery.mobile/public/views/partials/account.html
+++ b/node.jquery.mobile/public/views/partials/account.html
@@ -1,12 +1,13 @@
-<div data-role="page" class="ui-page ui-body-c ">
+<div data-role="page" id="account" class="ui-page ui-body-c " data-dom-cache="true">
     <div data-role="header" class="ui-bar-a ui-header" role="banner">
         <a href="/" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
-            <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
-        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">{title} - about</h1>
+        <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
+        <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">{title} - account</h1>
     </div>
     <div data-role="content" class="ui-content" role="main">
-        <h2>{title} - about</h2>
-        <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
+        <h2>{title} - account</h2>
+
+        My Account <a href="logout" data-ajax="false">logout</a>
         <ul  data-role="listview" data-inset="true">
             {#actions}<li><a href="{url}" data-ajax="false">{label}</a></li>{/actions}
         </ul>
