--- a/node.jquery.mobile/public/views/about.html
+++ b/node.jquery.mobile/public/views/about.html
@@ -15,15 +15,15 @@
     <!--server
     <script>
         var page = 'about';
-        $.mobile.autoInitializePage = false
+        $.mobile.autoInitializePage = true;
     </script>
-    <script src="/javascripts/bootstrap_server_templating.js"></script>
-    -->
+    <script src="/javascripts/bootstrap_server_templating.js"></script>-->
+
 
     <!--compile
      <script>
         var page = 'about';
-        $.mobile.autoInitializePage = false
+        $.mobile.autoInitializePage = false;
     </script>
     <script src="/javascripts/dust-full-0.3.0.min.js"></script>
     <script src="/javascripts/bootstrap_client_compile_templating.js"></script>-->
@@ -31,7 +31,7 @@
     <!--precompile-->
      <script>
         var page = 'about';
-        $.mobile.autoInitializePage = false
+        $.mobile.autoInitializePage = false;
     </script>
     <script src="/javascripts/dust-core-0.3.0.js"></script>
     <script src="/views/partials/compiled_0_0_1/about_0_0_1.js"></script>
@@ -45,10 +45,10 @@
             <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">{title} - about</h1>
         </div>
         <div data-role="content" class="ui-content" role="main">
-            <h2>{title} - about</h2>
+            <h2>{title}</h2>
             <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
             <ul  data-role="listview" data-inset="true">
-                {#actions}<li><a href="{url}" data-ajax="false">{label}</a></li>{/actions}
+                {#actions}<li><a href="{href}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
             </ul>
         </div>
         <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
