--- a/node.jquery.mobile/public/views/partials/github.html
+++ b/node.jquery.mobile/public/views/partials/github.html
@@ -1,14 +1,14 @@
-<div data-role="page" id="github" class="ui-page ui-body-c " data-dom-cache="true">
+<div data-role="page" class="ui-page ui-body-c " data-dom-cache="true">
     <div data-role="header" class="ui-bar-a ui-header" role="banner">
         <a href="/" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
         <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
         <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">{title} - github</h1>
     </div>
     <div data-role="content" class="ui-content" role="main">
-        <h2>{title} - github</h2>
+        <h2>{title}</h2>
         <p><a href="andrew.keig@gmail.com">download {title} here</a></p>
         <ul  data-role="listview" data-inset="true">
-            {#actions}<li><a href="{url}" data-ajax="false">{label}</a></li>{/actions}
+            {#actions}<li><a href="{href}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
