--- a/node.jquery.mobile/public/views/partials/login.html
+++ b/node.jquery.mobile/public/views/partials/login.html
@@ -1,13 +1,13 @@
-<div data-role="page" id="index" login="ui-page ui-body-c ui-page-active">
+<div data-role="page" login="ui-page ui-body-c ui-page-active">
     <div data-role="header" class="ui-bar-a ui-header" role="banner">
         <a href="/"  data-ajax="false" class="ui-btn-left ui-btn ui-btn-icon-left ui-btn-corner-all ui-shadow ui-btn-up-a" data-icon="arrow-l" data-theme="a">
         <span class="ui-btn-inner ui-btn-corner-all"><span class="ui-btn-text">Back</span><span class="ui-icon ui-icon-arrow-l ui-icon-shadow"></span></span></a>
         <h1 class="ui-title" tabindex="0" role="heading" aria-level="1">{title} - login</h1>
     </div>
     <div data-role="content" class="ui-content" role="main">
-        <h2>{title} - login</h2>
+        <h2>{title}</h2>
         <p>complete the below to login/register</p>
-        <form method="{login.method}" action="{login.url}" data-ajax="false"  enctype="application/x-www-form-urlencoded">
+        <form method="{login.method}" action="{login.href}" data-ajax="false"  enctype="application/x-www-form-urlencoded">
             <div data-role="fieldcontain">
                 <label for="name">{login.username.label}:</label>
                 <input type="text" name="{login.username.name}" id="{login.username.name}" size="25" class="username textbox" placeholder="{login.username.placeholder}"  required/>
