--- a/node.html5.boilerplate/public/views/about.html
+++ b/node.html5.boilerplate/public/views/about.html
@@ -15,7 +15,7 @@
   <script src="/javascripts/modernizr-2.5.3.min.js"></script>
     <!--server-->
     <script>
-        var page = 'home';
+        var page = 'about';
         $.mobile.autoInitializePage = true;
     </script>
     <script src="/javascripts/bootstrap_server_templating.js"></script>
