--- a/node.html5.boilerplate/public/views/contact.html
+++ b/node.html5.boilerplate/public/views/contact.html
@@ -15,7 +15,7 @@
   <script src="/javascripts/modernizr-2.5.3.min.js"></script>
     <!--server-->
     <script>
-        var page = 'home';
+        var page = 'contact';
         $.mobile.autoInitializePage = true;
     </script>
     <script src="/javascripts/bootstrap_server_templating.js"></script>
@@ -25,13 +25,14 @@
   <header>
         <img src="/images/logo.png"/>
   </header>
+
   <section>
       <nav>
         <ul>
               {#actions}<li><a href="{href}" rel="{rel}">{text}</a></li>{/actions}
         </ul>
       </nav>
-      <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
+      <p>contact us here <a href="mailto:{contact.email}">{contact.email}</a></p>
       <article>{#articles}<h1>{title}</h1><br/>{date}<br/>{body}</li>{/articles}</article>
   </section>
   <footer>
