--- a/node.html5.boilerplate/public/views/github.html
+++ b/node.html5.boilerplate/public/views/github.html
@@ -15,7 +15,7 @@
   <script src="/javascripts/modernizr-2.5.3.min.js"></script>
     <!--server-->
     <script>
-        var page = 'home';
+        var page = 'github';
         $.mobile.autoInitializePage = true;
     </script>
     <script src="/javascripts/bootstrap_server_templating.js"></script>
@@ -31,7 +31,7 @@
               {#actions}<li><a href="{href}" rel="{rel}">{text}</a></li>{/actions}
         </ul>
       </nav>
-      <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
+      <p><a href="andrew.keig@gmail.com">download {title} here</a></p>
       <article>{#articles}<h1>{title}</h1><br/>{date}<br/>{body}</li>{/articles}</article>
   </section>
   <footer>
