--- a/node.html5.boilerplate/public/views/login.html
+++ b/node.html5.boilerplate/public/views/login.html
@@ -15,7 +15,7 @@
   <script src="/javascripts/modernizr-2.5.3.min.js"></script>
     <!--server-->
     <script>
-        var page = 'home';
+        var page = 'login';
         $.mobile.autoInitializePage = true;
     </script>
     <script src="/javascripts/bootstrap_server_templating.js"></script>
@@ -31,7 +31,18 @@
               {#actions}<li><a href="{href}" rel="{rel}">{text}</a></li>{/actions}
         </ul>
       </nav>
-      <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
+      <p>complete the below to login/register</p>
+      <form method="{login.method}" action="{login.href}" enctype="application/x-www-form-urlencoded">
+          <div>
+              <label for="name">{login.username.label}:</label>
+              <input type="text" name="{login.username.name}" id="{login.username.name}" size="25" class="username textbox" placeholder="{login.username.placeholder}"  required/>
+          </div>
+          <div>
+              <label for="name">{login.password.label}:</label>
+              <input type="password" name="{login.password.name}" id="{login.password.name}" size="25" class="password textbox" placeholder="{login.password.placeholder}" required/>
+          </div>
+          <button type="submit" >{login.button.name}</button>
+      </form>
       <article>{#articles}<h1>{title}</h1><br/>{date}<br/>{body}</li>{/articles}</article>
   </section>
   <footer>
