--- a/node.html5.boilerplate/public/views/login.html
+++ b/node.html5.boilerplate/public/views/login.html
@@ -13,6 +13,7 @@
     <script src="/javascripts/modernizr-2.5.3.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <script src="/javascripts/socket.io.js"></script>
+    <script src="/javascripts/uri.js"></script>
     <script src="/javascripts/node.plates.js"></script>
     <!--server-->
     <script>
