--- a/node.jquery.mobile/public/views/partials/home.html
+++ b/node.jquery.mobile/public/views/partials/home.html
@@ -6,7 +6,7 @@
     </div>
     <div data-role="content" class="ui-content" role="main">
         <h2>{title}</h2>
-
+        <ul id="options" type="square"></ul>
         <ul data-role="listview" data-theme="g"  data-inset="true">
             {#articles} <li>{title}{date}{body}</li>{/articles}
         </ul>
