--- a/node.jquery.mobile/public/views/home.html
+++ b/node.jquery.mobile/public/views/home.html
@@ -7,35 +7,39 @@
     <meta charset="utf-8">
     <title>{title}</title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
+    <script src="/javascripts/dust-full-0.3.0.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
     <script src="/javascripts/uri.js"></script>
+    <script src="/javascripts/underscore-min.js"></script>
+    <script src="/javascripts/backbone-min.js"></script>
     <script src="/javascripts/socket.io.js"></script>
-    <script src="/javascripts/node.plates.js"></script>
 
-    <!--server-->
+
+
+    <!--server
     <script>
         var page = 'home';
         $.mobile.autoInitializePage = true;
     </script>
-    <script src="/javascripts/bootstrap_server_templating.js"></script>
+    <script src="/javascripts/bootstrap_server_templating.js"></script>-->
 
     <!--compile
      <script>
         var page = 'home';
         $.mobile.autoInitializePage = false;
     </script>
-    <script src="/javascripts/dust-full-0.3.0.min.js"></script>
+
     <script src="/javascripts/bootstrap_client_compile_templating.js"></script>-->
 
-    <!--precompile
+    <!--precompile-->
     <script>
         var page = 'home';
         $.mobile.autoInitializePage = false;
     </script>
     <script src="/javascripts/dust-core-0.3.0.js"></script>
     <script src="/views/partials/compiled_0_0_1/home_0_0_1.js"></script>
-    <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>-->
+    <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>
 </head>
 <body class="ui-mobile-viewport" id="home">
 <div data-role="page" class="ui-page ui-body-c ">
@@ -46,6 +50,7 @@
     </div>
     <div data-role="content" class="ui-content" role="main">
         <h2>{title}</h2>
+        <ul id="options" type="square"></ul>
         <ul data-role="listview" data-theme="g" data-inset="true" style="padding:10px;">
             {#articles}<h1>{title}</h1><br/>{date}<br/>{body}</li>{/articles}
         </ul>
