--- a/node.jquery.mobile/public/views/partials/home.html
+++ b/node.jquery.mobile/public/views/partials/home.html
@@ -13,7 +13,7 @@
 
         <p>node.js boilerplate using express, socket.io, mongooose, jquery.mobile & html 5</p>
         <ul  data-role="listview" data-inset="true">
-            {#actions}<li><a href="{href}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
+            {#actions}<li><a href="{domain}:{port}/{path}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
         </ul>
     </div>
 
