--- a/node.jquery.mobile/public/views/home.html
+++ b/node.jquery.mobile/public/views/home.html
@@ -7,14 +7,12 @@
     <meta charset="utf-8">
     <title>{title}</title>
     <link rel="stylesheet" href="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.css" />
-    <script src="/javascripts/dust-full-0.3.0.min.js"></script>
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
     <script src="/javascripts/uri.js"></script>
     <script src="/javascripts/underscore-min.js"></script>
     <script src="/javascripts/backbone-min.js"></script>
     <script src="/javascripts/socket.io.js"></script>
-
 
 
     <!--server
@@ -24,22 +22,22 @@
     </script>
     <script src="/javascripts/bootstrap_server_templating.js"></script>-->
 
-    <!--compile
+    <!--compile-->
      <script>
         var page = 'home';
         $.mobile.autoInitializePage = false;
     </script>
+    <script src="/javascripts/dust-full-0.3.0.min.js"></script>
+    <script src="/javascripts/bootstrap_client_compile_templating.js"></script>
 
-    <script src="/javascripts/bootstrap_client_compile_templating.js"></script>-->
-
-    <!--precompile-->
+    <!--precompile
     <script>
         var page = 'home';
         $.mobile.autoInitializePage = false;
     </script>
     <script src="/javascripts/dust-core-0.3.0.js"></script>
     <script src="/views/partials/compiled_0_0_1/home_0_0_1.js"></script>
-    <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>
+    <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>-->
 </head>
 <body class="ui-mobile-viewport" id="home">
 <div data-role="page" class="ui-page ui-body-c ">
@@ -56,7 +54,7 @@
         </ul>
 
         <ul data-role="listview" data-inset="true">
-            {#actions}<li><a href="{href}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
+            {#actions}<li><a href="{domain}:{port}/{path}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
