--- a/node.jquery.mobile/public/views/login.html
+++ b/node.jquery.mobile/public/views/login.html
@@ -10,15 +10,16 @@
     <script src="http://code.jquery.com/jquery-1.6.4.min.js"></script>
     <script src="http://code.jquery.com/mobile/1.0.1/jquery.mobile-1.0.1.min.js"></script>
     <script src="/javascripts/uri.js"></script>
+    <script src="/javascripts/underscore-min.js"></script>
+    <script src="/javascripts/backbone-min.js"></script>
     <script src="/javascripts/socket.io.js"></script>
-    <script src="/javascripts/node.plates.js"></script>
 
-    <!--server-->
+    <!--server
     <script>
         var page = 'login';
         $.mobile.autoInitializePage = true;
     </script>
-    <script src="/javascripts/bootstrap_server_templating.js"></script>
+    <script src="/javascripts/bootstrap_server_templating.js"></script>-->
 
 
     <!--compile
@@ -29,14 +30,14 @@
     <script src="/javascripts/dust-full-0.3.0.min.js"></script>
     <script src="/javascripts/bootstrap_client_compile_templating.js"></script>-->
 
-    <!--precompile
+    <!--precompile-->
     <script>
         var page = 'login';
         $.mobile.autoInitializePage = false;
     </script>
     <script src="/javascripts/dust-core-0.3.0.js"></script>
     <script src="/views/partials/compiled_0_0_1/login_0_0_1.js"></script>
-    <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>-->
+    <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>
 </head>
 <body class="ui-mobile-viewport" id="login">
 <div data-role="page" login="ui-page ui-body-c ui-page-active">
@@ -47,8 +48,9 @@
     </div>
     <div data-role="content" class="ui-content" role="main">
         <h2>{title}</h2>
+        <ul id="options" type="square"></ul>
         <p>complete the below to login/register</p>
-        <form method="{login.method}" action="{login.href}" data-ajax="false"  enctype="application/x-www-form-urlencoded">
+        <form method="{login.method}" action="{login.domain}:{login.port}/{login.path}" data-ajax="false"  enctype="application/x-www-form-urlencoded">
             <div data-role="fieldcontain">
                 <label for="name">{login.username.label}:</label>
                 <input type="text" name="{login.username.name}" id="{login.username.name}" size="25" class="username textbox" placeholder="{login.username.placeholder}"  required/>
