--- a/node.html5.boilerplate/public/views/account.html
+++ b/node.html5.boilerplate/public/views/account.html
@@ -32,7 +32,7 @@
       <ul id="options" type="square"></ul>
       <nav>
         <ul>
-              {#actions}<li><a href="{domain}:{port}/{path}" rel="{rel}">{text}</a></li>{/actions}
+              {#actions}<li><a href="{domain}{port}/{path}" rel="{rel}">{text}</a></li>{/actions}
         </ul>
       </nav>
       <p>My Account <a href="logout" >logout</a></p>
