--- a/node.jquery.mobile/public/views/github.html
+++ b/node.jquery.mobile/public/views/github.html
@@ -51,7 +51,7 @@
         <ul id="options" type="square"></ul>
         <p><a href="https://github.com/AndrewKeig/node-plates">download {title} here</a></p>
         <ul  data-role="listview" data-inset="true">
-            {#actions}<li><a href="{domain}:{port}/{path}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
+            {#actions}<li><a href="{domain}{port}/{path}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
