--- a/node.jquery.mobile/public/views/home.html
+++ b/node.jquery.mobile/public/views/home.html
@@ -54,7 +54,7 @@
         </ul>
 
         <ul data-role="listview" data-inset="true">
-            {#actions}<li><a href="{domain}:{port}/{path}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
+            {#actions}<li><a href="{domain}{port}/{path}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
