--- a/node.html5.boilerplate/public/views/contact.html
+++ b/node.html5.boilerplate/public/views/contact.html
@@ -32,7 +32,7 @@
       <ul id="options" type="square"></ul>
       <nav>
         <ul>
-              {#actions}<li><a href="{domain}:{port}/{path}" rel="{rel}">{text}</a></li>{/actions}
+              {#actions}<li><a href="{domain}{port}/{path}" rel="{rel}">{text}</a></li>{/actions}
         </ul>
       </nav>
       <p>contact us here <a href="mailto:{contact.email}">{contact.email}</a></p>
