--- a/node.html5.boilerplate/public/views/github.html
+++ b/node.html5.boilerplate/public/views/github.html
@@ -32,7 +32,7 @@
       <ul id="options" type="square"></ul>
       <nav>
         <ul>
-              {#actions}<li><a href="{domain}:{port}/{path}" rel="{rel}">{text}</a></li>{/actions}
+              {#actions}<li><a href="{domain}{port}/{path}" rel="{rel}">{text}</a></li>{/actions}
         </ul>
       </nav>
       <p><a href="https://github.com/AndrewKeig/node-plates">download {title} here</a></p>
