--- a/node.jquery.mobile/public/views/partials/contact.html
+++ b/node.jquery.mobile/public/views/partials/contact.html
@@ -9,7 +9,7 @@
         <ul id="options" type="square"></ul>
         <p>contact us here <a href="mailto:{contact.email}">{contact.email}</a></p>
         <ul  data-role="listview" data-inset="true">
-            {#actions}<li><a href="{domain}:{port}/{path}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
+            {#actions}<li><a href="{domain}{port}/{path}" data-ajax="false" rel="{rel}">{text}</a></li>{/actions}
         </ul>
     </div>
     <div data-role="footer" class="ui-bar-a ui-footer" role="contentinfo">
