--- a/node.jquery.mobile/public/views/account.html
+++ b/node.jquery.mobile/public/views/account.html
@@ -14,13 +14,12 @@
     <script src="/javascripts/backbone-min.js"></script>
     <script src="/javascripts/socket.io.js"></script>
 
-    <!--server
+    <!--server-->
     <script>
         var page = 'account';
         $.mobile.autoInitializePage = true;
     </script>
-    <script src="/javascripts/bootstrap_server_templating.js"></script>-->
-
+    <script src="/javascripts/bootstrap_server_templating.js"></script>
 
     <!--compile
      <script>
@@ -30,14 +29,14 @@
     <script src="/javascripts/dust-full-0.3.0.min.js"></script>
     <script src="/javascripts/bootstrap_client_compile_templating.js"></script>-->
 
-    <!--precompile-->
+    <!--precompile
     <script>
         var page = 'account';
         $.mobile.autoInitializePage = false;
     </script>
     <script src="/javascripts/dust-core-0.3.0.js"></script>
     <script src="/views/partials/compiled_0_0_1/account_0_0_1.js"></script>
-    <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>
+    <script src="/javascripts/bootstrap_client_precompile_templating.js"></script>-->
 </head>
 <body class="ui-mobile-viewport" id="account">
     <div data-role="page" class="ui-page ui-body-c " >
