--- a/node.jquery.mobile/public/views/home.html
+++ b/node.jquery.mobile/public/views/home.html
@@ -14,21 +14,20 @@
     <script src="/javascripts/backbone-min.js"></script>
     <script src="/javascripts/socket.io.js"></script>
 
-
-    <!--server
+    <!--server-->
     <script>
         var page = 'home';
         $.mobile.autoInitializePage = true;
     </script>
-    <script src="/javascripts/bootstrap_server_templating.js"></script>-->
+    <script src="/javascripts/bootstrap_server_templating.js"></script>
 
-    <!--compile-->
+    <!--compile
      <script>
         var page = 'home';
         $.mobile.autoInitializePage = false;
     </script>
     <script src="/javascripts/dust-full-0.3.0.min.js"></script>
-    <script src="/javascripts/bootstrap_client_compile_templating.js"></script>
+    <script src="/javascripts/bootstrap_client_compile_templating.js"></script>-->
 
     <!--precompile
     <script>
